fixed firefox bug where visited cell borders were not visible

--- a/src/components/grid-cell/GridCell.scss
+++ b/src/components/grid-cell/GridCell.scss
@@ -4,6 +4,8 @@
   margin: 0;
   box-sizing: border-box;
   cursor: pointer;
+  background-clip: padding-box;
+  -moz-background-clip: padding-box;
 
   &.grid-border {
     border: 1px solid rgba(136, 136, 136, 0.5) !important;
